fix database to production

--- a/config/database.yml
+++ b/config/database.yml
@@ -16,6 +16,4 @@ test:
 
 production:
   <<: *default
-  database: weblog_production
-  username: weblog
-  password: <%= ENV['WEBLOG_DATABASE_PASSWORD'] %>
+  database: app
